        * Option is on by default; should be disabled by default, and enabled
          via config.
        * ASDW is QWERTY-centric; drop it, or add ways to support other
          keyboard layouts.
        * Who wrote this, so we can credit!?!?

  * Other Improvements:
    -------------------
    * Quicker prompt window pop-up animation.

    * Tux Paint (in windowed mode) now only centers itself if
      no specific positioning has been provided via
      the SDL_VIDEO_WINDOW_POS environment variable.
      (SourceForge Bug #3138446)

    * Creating thumbnails for the starters we provide.
      (Speeds up 'New' dialog appearance.)
      (SourceForge Bug #1417849)
      Pere Pujal i Carabantes <pere@fornol.no-ip.org>

    * On systems where Pango is used for UI text rendering, Tux Paint now
      spawns a temporary thread during start-up (at the splash screen) to
      allow "fontconfig" to generate its font cache in the background,
      while showing the "please wait" animation, and responding to the US.
      (Fontconfig takes a long time to generate its cache the first time
      you run a Pango- and hence fontconfig-enabled application
      (Tux Paint, Gimp, Inkscape, etc.), or after adding lots of new fonts
      to your system).
      SF.net Bug #2944951

    * Thumbnailing (of UI elements, stamps, saved images, etc.) is now
      gamma-corrected. See:
      http://www.4p8.com/eric.brasseur/gamma.html

    * Template images are now supported.  Similar to Starters, they are
      pre-drawn pictures to begin a new drawing with, accessed via the
      "New" dialog.  The "Eraser" tool will erase back to the original
      picture (rather than a solid color).

      Unlike Starters, they do not involve an immutable "layer" above the
      drawing.  They may be drawn over in their entirety.

    * After switching into, or out of, a magic tool, the canvas is updated.

    * Starter images can be in SVG (Scalable Vector Graphics) format.